tests/paczka1/fuzzy1/73285184.err
Error in line 10: T8zBp S562 28,3
Error in line 8: 6pvc S562 504,6
Error in line 11: T8zBp A524 66,3
Error in line 13: 6pvc A524 97,0
Error in line 17: SzNF A153 10,9
Error in line 21: nKUB4Z5X A153 58,6
Error in line 22: 6pvc A153 222,8
